samples/_failures_safe/1761426432_6e32c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69980a56.c: In function ‘main’:
./samples/SAFE/__tmp_69980a56.c:165:9: error: expected declaration or statement at end of input
  165 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_69980a56.c:165:9: error: expected declaration or statement at end of input
